fix update task flow
