# src/projects/entities/project-domain.entity.ts
@@ -1,10 +1,11 @@
 import { ApiProperty } from '@nestjs/swagger';
 
-export class CategoryEntity {
+export class ProjectDomainEntity {
   @ApiProperty()
   id: number;
   @ApiProperty()
   name: string;
+
   @ApiProperty()
-  color?: string;
+  url: string;
 }
