# src/reports/entities/report-full.entity.ts
@@ -1,6 +1,8 @@
 import { ReportListItemEntity } from './report.entity';
 import { ReportCommentsEntity } from 'src/report-comments/entities/report-comments.entity';
 import { ApiProperty } from '@nestjs/swagger';
+import { DuplicateLevel } from '@prisma/client';
+import { TaskCompactEntity } from 'src/tasks/entities/task-full.entity';
 
 export class ReportImageEntity {
   @ApiProperty()
@@ -11,6 +13,20 @@ export class ReportImageEntity {
   path: string;
   @ApiProperty()
   reportId: number;
+}
+
+export class ReportCompactEntity {
+  @ApiProperty()
+  id: number;
+  @ApiProperty()
+  name: string;
+}
+
+export class ReportDuplicateEntity extends ReportCompactEntity {
+  @ApiProperty({
+    enum: DuplicateLevel,
+  })
+  level: DuplicateLevel;
 }
 export class ReportFullEntity extends ReportListItemEntity {
   @ApiProperty({
@@ -23,4 +39,30 @@ export class ReportFullEntity extends ReportListItemEntity {
     type: ReportCommentsEntity,
   })
   ReportComment: ReportCommentsEntity[];
+
+  @ApiProperty({
+    isArray: true,
+    type: ReportDuplicateEntity,
+    required: false,
+  })
+  DuplicateGroup?: ReportDuplicateEntity[];
+
+  @ApiProperty({
+    isArray: true,
+    type: ReportCompactEntity,
+    required: false,
+  })
+  children?: ReportCompactEntity[];
+
+  @ApiProperty({
+    isArray: true,
+    type: TaskCompactEntity,
+    required: false,
+  })
+  Task?: TaskCompactEntity[];
+
+  constructor(partial: Partial<ReportFullEntity>) {
+    super(partial);
+    Object.assign(this, partial);
+  }
 }
